[package]
name = "bikefitter"
version = "0.1.0"
authors = ["Lukas_Skywalker <lukas.diener@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.0"
iced = { git = "https://github.com/hecrj/iced", branch = "master", features = ["glow", "tokio"] }
iced_native = { git = "https://github.com/hecrj/iced", branch = "master" }
iced_futures = { git = "https://github.com/hecrj/iced", branch = "master" }
async-std = "1.6.5"
