[package]
name = "bikefitter"
version = "0.1.0"
authors = ["Lukas_Skywalker <lukas.diener@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.0"
iced = { version = "0.3.0", features = ["glow", "tokio"] }
iced_native = { version = "0.4.0" }
iced_futures = { version = "0.3.0" }
async-std = "1.6.5"
